Fixes scrollable spacing

--- a/styles/swade-raise-calculator.css
+++ b/styles/swade-raise-calculator.css
@@ -17,20 +17,27 @@
         --indiglo-screen-background-color: #5df9fa;
         --screen-foreground-color: var(--grey-screen-foreground-color);
         --screen-background-color: var(--grey-screen-background-color);
+        --screen-font: var(--font-monospace);
 
         width: 236px;
+
+        .window-content {
+            row-gap: var(--spacing);
+        }
+
+        .scrollable {
+            --scroll-margin: 0;
+        }
 
         .screen {
             position: relative;
             min-height: 100px;
-            margin: 0 12px var(--spacing) 12px;
             padding: var(--spacing);
             display: flex;
             flex-direction: column;
             place-content: center;
             align-self: stretch;
             gap: var(--spacing);
-            font-family: var(--font-monospace);
             text-align: center;
             color: var(--screen-foreground-color);
             background-color: var(--grey-screen-background-color);
@@ -79,7 +86,7 @@
             h2 {
                 position: relative;
                 margin: 0;
-                font-family: var(--font-monospace);
+                font-family: var(--screen-font);
                 font-size: 1.25em;
                 color: var(--screen-foreground-color);
                 border: none;
@@ -88,6 +95,7 @@
             p {
                 position: relative;
                 margin: 0;
+                font-family: var(--screen-font);
                 font-size: 1em;
                 font-weight: bold;
                 color: var(--screen-foreground-color);
@@ -95,7 +103,8 @@
         }
 
         & #number-grid {
-            margin-left: 12px;
+            margin: 0;
+            margin-right: calc(-1.5 * var(--spacing));
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             grid-auto-flow: row;
